...
import usePopupStateStore from '../../../store/popupState';
import Login from '@/partials/models/itemModels/Login';
import { PULL_REQUEST_TYPES, REQUEST_STRING_ACTIONS } from '@/constants';
import getItem from '@/partials/sessionStorage/getItem';

const Name = lazy(() => import('../components/Name'));
const Username = lazy(() => import('../components/Username'));
const Password = lazy(() => import('../components/Password'));
const SecurityType = lazy(() => import('../components/SecurityType'));
const Tags = lazy(() => import('../components/Tags'));
const Notes = lazy(() => import('../components/Notes'));
const DangerZone = lazy(() => import('../components/DangerZone'));

...
